# harness

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.sh  development.md  proposal.md
.github/workflows/: quality-gate.yml  quallity-gate.yml  test.yml
assets/: sample_harness_code.wasm
examples/: README.md
examples/hello/: .env  Cargo.toml  build.sh  dfx.json  ic_mock.wat
examples/hello/.dfx/local/: canister_ids.json  network-id
examples/hello/.dfx/local/canisters/hello/: constructor.did  hello.wasm  index.js  service.did.d.ts  service.did.js
examples/hello/assets/: hello_backend.wasm  hello_harness.wasm
examples/hello/harness_assets/: harness_schema.json
examples/hello/src/: hello.did  lib.rs
examples/hello/src/hello_backend/: Cargo.toml
examples/hello/src/hello_backend/src/: lib.rs
harness/: Cargo.toml
harness-cdk/: Cargo.toml  README.md
harness-cdk/compilation_tests/: all.rs  associated_fn.rs  associated_fn.stderr  free_standing_fn.rs  method_impl.rs  method_impl.stderr  no_params.rs  no_return.rs  noop.rs  unsupported_impl.rs  unsupported_impl.stderr
harness-cdk/macro_tests/: embed_program.rs  schema_info.rs
harness-cdk/src/: api.rs  arbiter.rs  cost.rs  device.rs  lib.rs  mod.rs  utils.rs
harness-cdk/tests/: canister_impl.rs  harness_impl.rs  harness_impl_no_return.rs  harness_impl_with_return.rs
harness-cli/: Cargo.toml  README.md
harness-macro/: Cargo.toml
harness-macro/src/: func.rs  lib.rs
harness-macros/: Cargo.toml  README.md  build.rs
harness-macros/src/: bootstrap.rs  extractor.rs  http_outcall.rs  lib.rs  mod.rs  retrieve_statics.rs  schema.rs  strip.rs
harness-node/: Cargo.toml  README.md
harness-node/src/: device.rs  lib.rs  main.rs  network.rs
harness-node/tests/: wapc_test.rs
harness-primitives/: Cargo.toml
harness-primitives/src/: device.rs  error.rs  harness_os.rs  http.rs  internals.rs  lib.rs  program.rs  result.rs  schema.rs  wapc_host.rs  wapc_rewrites.rs
harness/src/: error.rs
