[workspace]
members = ["harness-cdk", "harness-cli", "harness-macro"]
resolver = "2"

# [workspace.package]
# rust-version = "1.70.0"

# [workspace.dependencies]
# hex = "0.4.3"
# num-bigint = { version = "0.4", features = ["serde"] }
# num-traits = "0.2"
# pretty = "0.12"
# serde = { version = "1.0", features = ["derive"] }
# thiserror = "1.0"
# anyhow = "1.0"
# rand = "0.8"
# arbitrary = "1.3"
