[package]
name = "harness-cdk"
version = "0.1.0"
edition = "2021"
authors = ["Osoro Bironga <fanosoro@gmail.com>"]
readme = "README.md"

[[test]]
name = "compilation_tests"
path = "compilation_tests/all.rs"
required-features = ["harness-macros/__harness-build"]

[[test]]
name = "embed_program"
path = "macro_tests/embed_program.rs"

[[test]]
name = "schema_info"
path = "macro_tests/schema_info.rs"

[dependencies]
thiserror = "1.0"
anyhow = "1.0.81"
candid = "0.10.5"
wapc-guest = "1.1.0"
harness-macros = { path = "../harness-macros" }
harness-primitives = { path = "../harness-primitives" }
ic-stable-structures = "0.6.4"
serde = "1.0.197"
ic-cdk = "0.13.1"
serde_json = "1.0.120"

[dev-dependencies]
rustversion = "1.0"
trybuild = "1.0"
harness-cdk = { path = ".", features = ["__harness-build"] }

[features]
__harness-build = ["harness-macros/__harness-build"]
