[package]
name = "harness-macro"
version = "0.1.0"
edition = "2021"
authors = ["Osoro Bironga"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
# thiserror = "1.0"
# anyhow = "1.0.81"
# candid = "0.10.5"
quote = "1.0.7"
proc-macro2 = { version = "1", default-features = false }
lazy_static = "1.4.0"
# serde = { version = "1", features = ["derive"] }
# serde_json = "1.0.114"
