[package]
name = "harness-macros"
version = "0.1.0"
edition = "2021"
authors = [" Osoro Bironga <fanosoro@gmail.com>"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
candid = "0.10.5"
quote = "1.0.7"
proc-macro2 = { version = "1", default-features = false }
lazy_static = "1.4.0"

[features]
# This feature is private and should not be activated manually, see (harness-cli)[../harness-cli]
__harness-build = []
