[package]
name = "harness-macros"
version = "0.1.0"
edition = "2021"
authors = ["Osoro Bironga <fanosoro@gmail.com>"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1.0.7"
proc-macro2 = { version = "1", default-features = false }
lazy_static = "1.4.0"
serde = "1.0.198"
harness-primitives = { path = "../harness-primitives" }
serde_json = "1.0.116"

[features]
__harness-build = []
