[package]
name = "harness"
version = "0.1.0"
edition = "2021"
authors = ["Osoro Bironga"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
thiserror = "1.0"
anyhow = "1.0.81"
candid = "0.10.5"
# quote = "1.0.7"
# proc-macro2 = { version = "1", default-features = false }
# syn = { version = "2", default-features = false }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1.0.114"
